# anton-mazur-github2-

./: .env  .gitignore  Dockerfile  alembic.ini  create_admin.py  docker-compose.yml  postman_commands.txt  requirements.txt  run.py  test_api.ps1
Antonmazur/: run.py
Antonmazur/app/: main.py
alembic/: env.py
antonmazur_fastapi/: Dockerfile  build-and-run.ps1  docker-compose.dev.yml  docker-compose.yml  docker_commands.txt  init.sql  pyproject.toml
antonmazur_fastapi/app/: main.py
app/: __init__.py  main.py  main_simple.py
app/api/: __init__.py
app/api/routes/: __init__.py  auth.py  categories.py  orders.py  products.py  protected.py  users.py
app/core/: __init__.py  config.py  database.py  dependencies.py  models.py  security.py
app/crud/: __init__.py  base.py  category.py  order.py  product.py  user.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  auth.py  category.py  order.py  product.py  user.py
app/services/: __init__.py  user_service.py
logs/: HEAD
logs/refs/heads/: develop  master
